# quantized-viet-asr-model

./: .gitignore  On_device_Ai.ipynb  README.md  convert_bpe2token.py  export_android_punctuation_bundle.py  export_punctuation_onnx.py  pyproject.toml  verify_android_punctuation_bundle.py
android_bundle/: README.md  __init__.py  exporter.py  golden_samples.py  manifest.py  runtime.py  tokenizer_bridge.py  verifier.py
export/: README.md  __init__.py  model_bundle.py  punctuation_onnx.py
model_bundle/: README.md  __init__.py  contracts.py  layout.py  manifest.py
model_bundle/projects/: README.md  __init__.py  _vpcd_support.py  zipformer.py
quantize/: README.md  __init__.py  calibration.py  cli.py  config.py  evaluate.py  fixed_shapes.py  model_introspection.py  presets.py  qnn.py  runner.py  runtime.py  types.py
quantize/calibration/: vpcd_calibration_dai.txt  vpcd_calibration_rat_dai.txt
quantize/calibration_100_cau/: vpcd_calibration_ngan.txt  vpcd_calibration_rat_dai.txt  vpcd_calibration_vua.txt
quantize/calibration_400_cau/: vpcd_calibration_ngan.txt
quantize/plan/: README.md
test/: README.md  conftest.py  test_acoustic_model_onnx.py  test_android_punctuation_bundle.py  test_export_verify_modules.py  test_extract_vlsp2020_calibration_subset.py  test_model_bundle_core.py  test_punctuation_model.py  test_punctuation_model_onnx.py  test_punctuation_onnx.py  test_quantize_projects.py  test_src_layout_bootstrap.py  test_vietasr.py  test_vpcd_bundle.py  test_zipformer_bundle.py  test_zipformer_quantize.py
verify/: README.md  __init__.py
(+43 files in other folders)
